; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_quota.c_quotaShmMap.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_quota.c_quotaShmMap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { {}* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_8__*, i32, i32, i32, i8**)* @quotaShmMap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @quotaShmMap(%struct.TYPE_8__* %0, i32 %1, i32 %2, i32 %3, i8** %4) #0 {
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8**, align 8
  %11 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i8** %4, i8*** %10, align 8
  %12 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %13 = call %struct.TYPE_8__* @quotaSubOpen(%struct.TYPE_8__* %12)
  store %struct.TYPE_8__* %13, %struct.TYPE_8__** %11, align 8
  %14 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %16, i32 0, i32 0
  %18 = bitcast {}** %17 to i32 (%struct.TYPE_8__*, i32, i32, i32, i8**)**
  %19 = load i32 (%struct.TYPE_8__*, i32, i32, i32, i8**)*, i32 (%struct.TYPE_8__*, i32, i32, i32, i8**)** %18, align 8
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* %8, align 4
  %23 = load i32, i32* %9, align 4
  %24 = load i8**, i8*** %10, align 8
  %25 = call i32 %19(%struct.TYPE_8__* %20, i32 %21, i32 %22, i32 %23, i8** %24)
  ret i32 %25
}

declare dso_local %struct.TYPE_8__* @quotaSubOpen(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
